--- a/dealers.html
+++ b/dealers.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dealer Program — Turtle Island Financing</title>
-  <meta name="description" content="Join Turtle Island Financing's Indigenous sensitivity-certified dealer network." />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/assets/favicon.png" />
+  <meta name="description" content="Indigenous sensitivity training and standards for dealer partners. Certification delivered by Brooke Ashley Group.">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/favicon.png">
+  <style>
+    .page-hero {background:#F3FCE4;padding:64px 0}
+    .doc {max-width:920px;margin:0 auto}
+    blockquote{border-left:4px solid #2AC6B6;padding:12px 16px;margin:16px 0;background:#F7FFFE}
+    .muted{opacity:.85}
+    .card{background:#fff;border:1px solid #E2F3EF;border-radius:16px;padding:24px;box-shadow:0 6px 24px rgba(0,0,0,.04);margin:12px 0}
+    .grid{display:grid;grid-template-columns:1fr;gap:16px}
+    @media(min-width:900px){.grid{grid-template-columns:1fr 1fr}}
+    .badge{display:inline-block;background:#2AC6B6;color:#073B3A;padding:6px 10px;border-radius:999px;font-weight:600}
+  </style>
 </head>
 <body>
   <header class="site-header">
@@ -16,108 +26,92 @@
         <div class="logo">🐢</div>
         <div class="brand-text">
           <h1>Turtle Island Financing</h1>
-          <p class="tag">Brooke Ashley Group Inc. (o/a)</p>
+          <p class="tag">Indigenous-led • Canada</p>
         </div>
       </div>
       <nav class="top-nav">
-        <a class="btn link" href="/">Home</a>
         <a class="btn link" href="/verify.html">Verify</a>
-        <a class="btn ghost" href="/#apply">Client Apply</a>
+        <a class="btn link" href="/">Home</a>
+        <a class="btn ghost" href="/#apply">Send a lead</a>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="container hero-grid">
-      <div class="hero-copy">
-        <h2>Join our certified, respectful dealer network</h2>
-        <p>Access prepared Indigenous clients, demonstrate cultural competency, and build long-term trust.</p>
-        <ul class="pill-list">
-          <li>Leads prepared with clear expectations</li>
-          <li>Indigenous Sensitivity Training by Brooke Ashley Group</li>
-          <li>5-year portable certification for staff</li>
-          <li>Transparent standards & public verification</li>
+  <section class="page-hero">
+    <div class="container doc">
+      <h2>Dealer Partner Program</h2>
+      <p class="muted">Certification training delivered by <strong>Brooke Ashley Group</strong>. Certification is valid for <strong>5 years</strong> and is <strong>portable</strong> across participating stores with an active membership.</p>
+      <span class="badge">Respect • Transparency • Results</span>
+    </div>
+  </section>
+
+  <main class="container doc">
+    <div class="grid">
+      <div class="card">
+        <h3>What you get</h3>
+        <ul class="checklist">
+          <li>Indigenous cultural competency training (TRC-aligned)</li>
+          <li>Certificate for each participant (5-year validity)</li>
+          <li>Public listing on our <a href="/verify.html">Verify</a> page</li>
+          <li>Eligibility to receive Turtle Island Financing leads</li>
+          <li>Practical guidance on tax exemption documentation and respectful communications</li>
+        </ul>
+        <p class="muted small">Note: Turtle Island Financing is a program of Brooke Ashley Group (operating as “Turtle Island Financing”). It is independent from CCAB’s CAB designation.</p>
+      </div>
+
+      <div class="card">
+        <h3>Program standards (summary)</h3>
+        <ul class="checklist">
+          <li>Patient, respectful engagement; zero pressure</li>
+          <li>Proper GST/HST/PST exemption handling; no “clawback” via pricing/add-ons</li>
+          <li>Comfort with seasonal, self-employed, and on-reserve income documentation (Canadian lenders)</li>
+          <li>Clear, truthful quotes; transparent fees; no bait-and-switch tactics</li>
         </ul>
       </div>
     </div>
-  </section>
 
-  <section class="role">
-    <div class="container">
-      <h3>Program at a glance</h3>
-      <div class="cards">
-        <div class="card"><h4>Training & Certification</h4><p>Staff complete Indigenous cultural competency training (valid 5 years, portable across participating stores).</p></div>
-        <div class="card"><h4>Lead Access</h4><p>Receive qualified submissions with documents roadmap; we set expectations on credit checks and timelines.</p></div>
-        <div class="card"><h4>Standards</h4><p>Zero-pressure sales, proper tax-exemption handling, and transparent pricing. <a href="/standards.html">Read standards</a>.</p></div>
-      </div>
+    <div class="card">
+      <h3>TRC Call to Action #92 — Business and Reconciliation</h3>
+      <p class="muted">Our training maps directly to the Truth and Reconciliation Commission’s Call to Action #92 for the corporate sector. Key elements include:</p>
+
+      <blockquote>
+        Adopt the <em>United Nations Declaration on the Rights of Indigenous Peoples</em> as a reconciliation framework and apply it to corporate policy and core operations involving Indigenous peoples and their lands and resources. This includes: (i) meaningful consultation and building respectful relationships; (ii) equitable access to jobs, training and education, with long-term community benefits; and (iii) education for management and staff on history, Treaties, UNDRIP, Indigenous law, and Aboriginal–Crown relations — with skills-based training in intercultural competency, conflict resolution, human rights and anti-racism.
+      </blockquote>
+
+      <p class="small muted">Source: Truth and Reconciliation Commission of Canada, Calls to Action #92. See the official text in the Calls to Action document. </p>
+      <p class="small"><a href="https://www2.gov.bc.ca/assets/gov/british-columbians-our-governments/indigenous-people/aboriginal-peoples-documents/calls_to_action_english2.pdf" target="_blank" rel="noopener">Read TRC #92</a></p>
     </div>
-  </section>
 
-  <section class="form-wrap">
-    <div class="container grid">
-      <div class="form-card">
-        <h3>Dealer Interest Form</h3>
-        <p class="muted">Tell us about your store. We’ll follow up with training dates, pricing, and onboarding.</p>
-
-        <form name="dealer-interest" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html">
-          <input type="hidden" name="form-name" value="dealer-interest" />
-          <p style="position:absolute;left:-9999px;"><label>Don’t fill this out: <input name="bot-field" /></label></p>
-
-          <div class="row">
-            <label>Dealership Name*<input type="text" name="dealership" required /></label>
-            <label>Province/Territory*<select name="province" required>
-              <option value="">Select…</option><option>BC</option><option>AB</option><option>SK</option><option>MB</option>
-              <option>ON</option><option>QC</option><option>NB</option><option>NS</option><option>PE</option>
-              <option>NL</option><option>YT</option><option>NT</option><option>NU</option>
-            </select></label>
-          </div>
-
-          <div class="row">
-            <label>Contact Name*<input type="text" name="contact" required /></label>
-            <label>Title<input type="text" name="title" /></label>
-          </div>
-
-          <div class="row">
-            <label>Email*<input type="email" name="email" required /></label>
-            <label>Phone*<input type="tel" name="phone" required /></label>
-          </div>
-
-          <div class="row">
-            <label># Sales/Finance staff to certify<input type="number" name="staff_count" min="1" /></label>
-            <label>Brand(s)<input type="text" name="brands" /></label>
-          </div>
-
-          <label>Notes (optional)<textarea name="notes" rows="3" placeholder="Timing, locations, questions…"></textarea></label>
-
-          <label class="consent"><input type="checkbox" name="agree" required />
-            I agree to Turtle Island Financing standards and understand training is delivered by Brooke Ashley Group Inc.
-          </label>
-
-          <button type="submit" class="btn wide">Request Onboarding</button>
-        </form>
+    <div class="grid">
+      <div class="card">
+        <h3>How certification works</h3>
+        <ol class="steps">
+          <li>Register your store and select training dates</li>
+          <li>Staff complete the Brooke Ashley Group session (virtual or on-site)</li>
+          <li>Participants receive 5-year certificates (portable across member dealers)</li>
+          <li>Your store appears on the public Verify page</li>
+        </ol>
       </div>
 
-      <aside class="trust">
-        <h4>Proof you can hang on the wall</h4>
-        <ul class="bullets">
-          <li>Certificate with staff name & expiry (5 years)</li>
-          <li>Public verification at <a href="/verify.html">/verify</a></li>
-          <li>Marketing badge for website & showroom</li>
-        </ul>
-      </aside>
+      <div class="card">
+        <h3>Join the network</h3>
+        <p>Ready to get certified and receive Indigenous-ready leads?</p>
+        <p><a class="btn" href="mailto:hello@turtleislandfinancing.ca?subject=Dealer%20Program%20Inquiry">Email to apply</a></p>
+      </div>
     </div>
-  </section>
+  </main>
 
   <footer class="site-footer">
     <div class="container foot">
-      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong></p>
+      <p>© <span id="year"></span> Turtle Island Financing — a program of Brooke Ashley Group (operating as “Turtle Island Financing”).</p>
       <nav>
         <a href="/">Home</a>
-        <a href="/standards.html">Our Standards</a>
         <a href="/verify.html">Verify</a>
       </nav>
     </div>
   </footer>
-  <script src="/script.js"></script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
