--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         <div class="logo">🐢</div>
         <div class="brand-text">
           <h1>Turtle Island Financing</h1>
-          <p class="tag">Indigenous  Owned and led • Canada</p>
+          <p class="tag">Indigenous-owned & led • Canada</p>
         </div>
       </div>
       <nav class="top-nav">
+        <a class="btn link" href="/supports.html">Supports</a>
         <a class="btn link" href="/verify.html">Verify</a>
         <a class="btn link" href="/dealers.html">For Dealers</a>
         <a class="btn ghost" href="#apply">Apply Now</a>
@@ -41,6 +42,7 @@
         <div class="hero-ctas">
           <a class="btn" href="#apply">Start Pre-Approval</a>
           <a class="btn link" href="#how-we-help">How We Help</a>
+          <a class="btn link" href="/supports.html">Supports & Roadmap</a>
         </div>
         <ul class="pill-list">
           <li>No cost to you</li>
@@ -72,7 +74,7 @@
   <section class="dealer-network">
     <div class="container">
       <h3>A Dealer Network That Respects You</h3>
-    <ul class="checklist">
+      <ul class="checklist">
         <li><strong>Trained by us</strong> to be patient, respectful, and transparent.</li>
         <li><strong>Educated on Indigenous history and protocol</strong> to honour your perspective.</li>
         <li>No high-pressure sales or tax-exemption gimmicks.</li>
@@ -94,95 +96,7 @@
     </div>
   </section>
 
- 
-      </div>
-    </div>
-  </section>
-
-  <section class="info-supports" aria-labelledby="supports-title">
-    <div class="container">
-      <div class="info-card">
-        <div class="info-head">
-          <h3 id="supports-title">Possible Extra Supports for Indigenous Clients (Canada)</h3>
-          <span class="label-warn">Not guaranteed</span>
-        </div>
-        <p class="muted">There’s no automatic special rate for being Indigenous. These programs are <strong>case-by-case</strong> and depend on your location, job, band programs, or training. We share them so you can check eligibility directly—no false promises.</p>
-        <ul class="link-list rich">
-          <li>
-            <strong>Employment &amp; Training (ISET)</strong> —
-            <a href="https://www.canada.ca/en/employment-social-development/services/indigenous/iset.html" target="_blank" rel="noopener noreferrer">Find your local ISET provider</a>
-            <div class="how">
-              <p><strong>Helps with:</strong> Case-by-case support for getting to work or training — sometimes travel/transport, gear, or short-term assistance if a vehicle is essential for employment or a certified program.</p>
-              <p><strong>Good fit if:</strong> You’re starting a job or enrolled/accepted in training and need reliable transport to attend.</p>
-              <p><strong>What to bring:</strong> Job offer or training acceptance letter, schedule/location, a simple note explaining why a vehicle is required, and a dealer quote (if requested).</p>
-              <p><strong>How to use on your application:</strong> Contact your ISET provider first and ask about “transportation supports.” If they confirm help, include their letter or email in your application notes.</p>
-            </div>
-          </li>
-
-          <li>
-            <strong>Band / Council Programs</strong> —
-            <a href="https://www.sac-isc.gc.ca/eng/1100100023232/1619469934912" target="_blank" rel="noopener noreferrer">Find your Band office</a>
-            <div class="how">
-              <p><strong>Helps with:</strong> Some Bands offer employment or economic-development supports (e.g., small down-payment assistance, letters of support/guarantee, or reimbursements) when a vehicle is essential for work.</p>
-              <p><strong>Good fit if:</strong> You are a member living on- or off-reserve and have Band programs for employment, training, or entrepreneurship.</p>
-              <p><strong>What to bring:</strong> Proof of Band membership, employer or buyer letters showing the vehicle is required, and a dealer quote.</p>
-              <p><strong>How to use on your application:</strong> If your Band can issue a support letter or funds, attach proof (letter/email) so the dealer/lender sees it up front.</p>
-            </div>
-          </li>
-
-          <li>
-            <strong>Tax Exemption (on-reserve or delivered to reserve)</strong> —
-            <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-specific-situations/gst-hst-indians.html" target="_blank" rel="noopener noreferrer">CRA GST/HST &amp; Indians</a> •
-            <a href="https://www2.gov.bc.ca/gov/content/taxes/sales-taxes/pst/exemptions/first-nations" target="_blank" rel="noopener noreferrer">BC PST Exemption</a>
-            <div class="how">
-              <p><strong>Helps with:</strong> Removes applicable sales taxes when all CRA/provincial rules are met (status card + purchase/delivery on reserve as required).</p>
-              <p><strong>Good fit if:</strong> You hold a valid status card and can meet the “on-reserve purchase or delivery” documentation rules in your province/territory.</p>
-              <p><strong>What to bring:</strong> Status card, proof of on-reserve residence (if needed), and delivery-to-reserve documentation. Ask the dealer to complete all required exemption forms.</p>
-              <p><strong>How to use on your application:</strong> Tell us in the notes if you’ll claim exemption and which reserve for delivery. <em>Reminder:</em> Exemption reduces taxes only; make sure the dealer’s price isn’t marked up, so the savings are real.</p>
-            </div>
-          </li>
-
-          <li>
-            <strong>Aboriginal Financial Institutions (via NACCA)</strong> —
-            <a href="https://nacca.ca/our-network/" target="_blank" rel="noopener noreferrer">Find a NACCA lender</a>
-            <div class="how">
-              <p><strong>Helps with:</strong> Business financing and development loans — including vehicles primarily used for business (e.g., fishing, crafts delivery, contracting).</p>
-              <p><strong>Good fit if:</strong> The vehicle is mainly for business use (typically &gt;50%) and you can show basic income from your activity (invoices, deposits, buyer letters).</p>
-              <p><strong>What to bring:</strong> Simple business plan or description, 6–12 months of bank statements, invoices/buyer letters, estimated vehicle cost/quote.</p>
-              <p><strong>How to use on your application:</strong> You can apply directly to an AFI, or include an AFI pre-approval/letter alongside your dealer application to strengthen the file.</p>
-            </div>
-          </li>
-
-          <li>
-            <strong>Indigenous Forestry Program (NRCan)</strong> —
-            <a href="https://natural-resources.canada.ca/our-natural-resources/forests-forestry/indigenous-forestry-program/21375" target="_blank" rel="noopener noreferrer">Program info</a>
-            <div class="how">
-              <p><strong>Helps with:</strong> Community and business projects in forestry — sometimes including training and capacity-building where transport is essential.</p>
-              <p><strong>Good fit if:</strong> You (or your Band/business) are part of an active forestry project or partnership that requires reliable transportation.</p>
-              <p><strong>What to bring:</strong> Project details or contact, proof your role requires a vehicle (employer letter / project manager email), and a quote.</p>
-              <p><strong>How to use on your application:</strong> Get a short note from the project lead confirming the need for a vehicle; include it in your application so the dealer understands the context.</p>
-            </div>
-          </li>
-        </ul>
-
-      </div>
-    </div>
-  </section>
-
-  <section id="roadmap" class="roadmap">
-    <div class="container">
-      <h3>Standard Approval Roadmap (Canada)</h3>
-      <ol class="steps">
-        <li><strong>Proof of Identity:</strong> Government-issued photo ID; Indigenous status card if claiming tax exemption.</li>
-        <li><strong>Proof of Income:</strong> 2+ years of one or more: CRA NOAs; T1 General returns; bank statements; employer letter; buyer/distributor letters.</li>
-        <li><strong>Proof of Residence:</strong> Utility bill, bank statement, or Band office letter.</li>
-        <li><strong>Credit Check:</strong> After we forward your application, <strong>the partner dealership</strong> will pull your credit report (Equifax or TransUnion Canada).</li>
-        <li><strong>Down Payment (if required):</strong> Some lenders require a small down payment for seasonal or non-salary income.</li>
-        <li><strong>Apply:</strong> Submit the form below when your documents are ready.</li>
-      </ol>
-      <div class="callout"><strong>Important:</strong> If income isn’t documented (tax returns, bank deposits, official letters), approval chances are very low—even with a down payment. On-reserve, tax-exempt income must be documented.</div>
-    </div>
-  </section>
+  <!-- Removed: Supports + Roadmap now live at /supports.html -->
 
   <section id="apply" class="form-wrap">
     <div class="container grid">
@@ -248,20 +162,23 @@
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
-          <li>Brooke Ashley Group. (o/a Turtle Island Financing) </li>
-          <li>100% Indigenous owned and operated</li>
-          <li>OCAP, Trauma informed Trained staff</li>
+          <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
+          <li>100% Indigenous-owned and operated</li>
+          <li>OCAP®-aligned, trauma-informed trained staff</li>
         </ul>
-        <div class="disclaimer"><p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p></div>
+        <div class="disclaimer">
+          <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p>
+        </div>
       </aside>
     </div>
   </section>
 
   <footer class="site-footer">
     <div class="container foot">
-      <p>© <span id="year"></span> Turtle Island Financing • An initiative of Brooke Ashley Group • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
+      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong> • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
       <nav>
         <a href="#apply">Apply</a>
+        <a href="/supports.html">Supports</a>
         <a href="/verify.html">Verify</a>
         <a href="/dealers.html">For Dealers</a>
         <a href="/standards.html">Our Standards</a>
@@ -271,6 +188,9 @@
     </div>
   </footer>
 
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
   <script src="script.js"></script>
 </body>
 </html>
