--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="hero-art">
         <div class="sun"></div>
         <div class="circle"></div>
-        <img src="assets/hero-art.svg" alt="Turtle motif in turquoise palette" />
+        <img src="https://github.com/Brookeashleygroup/Turtle-Island-Financing/blob/main/assets/20250815_0801_Joyful%20Truck%20Purchase%20Celebration_simple_compose_01k2q3xrtde84brgej2f9vb3fr.png" alt="Turtle motif in turquoise palette" />
       </div>
     </div>
   </section>
