--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
   <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/hero-art.svg">
+  <!-- Updated OG image to your new photo -->
+  <meta property="og:image" content="assets/hero-joyful-truck.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -54,7 +55,10 @@
       <div class="hero-art">
         <div class="sun"></div>
         <div class="circle"></div>
-        <img src="https://github.com/Brookeashleygroup/Turtle-Island-Financing/blob/main/assets/20250815_0801_Joyful%20Truck%20Purchase%20Celebration_simple_compose_01k2q3xrtde84brgej2f9vb3fr.png" alt="Turtle motif in turquoise palette" />
+        <!-- Updated hero image to local asset -->
+        <img src="assets/hero-joyful-truck.png"
+             alt="Happy customer celebrating a new truck purchase — Turtle Island Financing"
+             loading="eager" fetchpriority="high" decoding="async" />
       </div>
     </div>
   </section>
@@ -96,7 +100,7 @@
     </div>
   </section>
 
-  <!-- Removed: Supports + Roadmap now live at /supports.html -->
+  <!-- Supports + Roadmap live at /supports.html -->
 
   <section id="apply" class="form-wrap">
     <div class="container grid">
