--- a/index.html
+++ b/index.html
@@ -198,3 +198,11 @@
   <script src="script.js"></script>
 </body>
 </html>
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script>
+  if (window.netlifyIdentity) {
+    netlifyIdentity.on('login', () => {
+      document.location.href = '/dealers/portal.html';
+    });
+  }
+</script>
