--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turtle Island Financing — Indigenous Owned & led Auto Financing in Canada</title>
-  <meta name="description" content="Indigenous-owned lead service in Canada. Dealers trained in Indigenous protocol. Transparent, Canadian info only.">
-  <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
-  <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
+  <title>Turtle Island Financing — Truth in Financing, Indigenous Owned & Certified</title>
+  <meta name="description" content="100% Indigenous-owned, CCAB-certified financing support. Trauma-informed, OCAP-trained staff. Transparent auto financing that protects your tax exemption.">
+  <meta property="og:title" content="Turtle Island Financing — Transparent Indigenous Auto Financing">
+  <meta property="og:description" content="Indigenous-owned and certified. No gimmicks. Your exemption savings stay yours. We support informed decisions with Free, Prior, and Informed Consent (FPIC).">
   <meta property="og:type" content="website">
-  <!-- Updated OG image to your new photo -->
   <meta property="og:image" content="assets/hero-joyful-truck.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +22,7 @@
         <div class="logo">🐢</div>
         <div class="brand-text">
           <h1>Turtle Island Financing</h1>
-          <p class="tag">Indigenous-owned & led • Canada</p>
+          <p class="tag">100% Indigenous-Owned • CCAB Certified</p>
         </div>
       </div>
       <nav class="top-nav">
@@ -38,24 +37,21 @@
   <section class="hero">
     <div class="container hero-grid">
       <div class="hero-copy">
-        <h2>Respectful auto financing — built for our communities.</h2>
-        <p>We connect you with trained partner dealerships across Canada. Transparent, honest, and culturally sensitive from start to finish.</p>
+        <h2>Truth in Financing — Built on Respect, Transparency, and Choice</h2>
+        <p>We protect your Indigenous tax exemption. We don’t bury your savings in add-ons or gimmicks. At Turtle Island, you see every line of your deal and choose freely with informed consent.</p>
         <div class="hero-ctas">
           <a class="btn" href="#apply">Start Pre-Approval</a>
-          <a class="btn link" href="#how-we-help">How We Help</a>
+          <a class="btn link" href="#truth">Truth in Financing</a>
           <a class="btn link" href="/supports.html">Supports & Roadmap</a>
         </div>
         <ul class="pill-list">
-          <li>No cost to you</li>
-          <li>No false promises</li>
-          <li>Tax exemption handled respectfully</li>
-          <li>Dealers trained by us</li>
+          <li>100% Indigenous-owned & CCAB certified</li>
+          <li>Trauma-informed & OCAP® trained staff</li>
+          <li>20+ years working within Indigenous communities</li>
+          <li>Respectful handling of tax exemption</li>
         </ul>
       </div>
       <div class="hero-art">
-        <div class="sun"></div>
-        <div class="circle"></div>
-        <!-- Updated hero image to local asset -->
         <img src="assets/hero-joyful-truck.png"
              alt="Happy customer celebrating a new truck purchase — Turtle Island Financing"
              loading="eager" fetchpriority="high" decoding="async" />
@@ -63,62 +59,50 @@
     </div>
   </section>
 
-  <section id="how-we-help" class="role">
+  <section id="truth" class="truth-in-financing">
     <div class="container">
-      <h3>Our Role in Your Financing Journey</h3>
-      <div class="cards">
-        <div class="card"><h4>Connect</h4><p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p></div>
-        <div class="card"><h4>Prepare</h4><p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p></div>
-        <div class="card"><h4>Mediate</h4><p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p></div>
-        <div class="card"><h4>Support</h4><p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p></div>
-      </div>
-    </div>
-  </section>
-
-  <section class="dealer-network">
-    <div class="container">
-      <h3>A Dealer Network That Respects You</h3>
-      <ul class="checklist">
-        <li><strong>Trained by us</strong> to be patient, respectful, and transparent.</li>
-        <li><strong>Educated on Indigenous history and protocol</strong> to honour your perspective.</li>
-        <li>No high-pressure sales or tax-exemption gimmicks.</li>
-        <li>Comfortable working with seasonal, self-employed, and tax-exempt income within Canadian rules.</li>
-      </ul>
+      <h3>Truth in Financing: Shady vs. Transparent</h3>
+      <p>Here’s how some dealers inflate your loan vs. how Turtle Island protects your savings.</p>
+      <table class="comparison">
+        <thead>
+          <tr><th>Line Item</th><th>Shady Dealer</th><th>Turtle Island</th></tr>
+        </thead>
+        <tbody>
+          <tr><td>Vehicle Price</td><td>$25,000</td><td>$25,000</td></tr>
+          <tr><td>Fees (doc + finance)</td><td>$1,090</td><td>$1,090</td></tr>
+          <tr><td>Taxes (GST+PST)</td><td>$3,129.80</td><td>$0 (Exempt)</td></tr>
+          <tr><td>Add-Ons / Cash Back</td><td>$4,780</td><td>$0 (optional)</td></tr>
+          <tr><td><strong>Amount Financed</strong></td><td><strong>$34,000</strong></td><td><strong>$26,090</strong></td></tr>
+          <tr><td>Monthly Payment (60mo @10%)</td><td>$722</td><td>$554</td></tr>
+          <tr><td><strong>Total of Payments</strong></td><td><strong>$43,320</strong></td><td><strong>$33,240</strong></td></tr>
+          <tr><td>Total Interest Paid</td><td>$9,320</td><td>$7,150</td></tr>
+        </tbody>
+      </table>
+      <p class="muted small">With Turtle Island, you keep over $10,000 in savings that shady dealers try to take.</p>
     </div>
   </section>
 
   <section class="why-choose">
     <div class="container">
-      <h3>Why Choose Turtle Island Financing?</h3>
-      <div class="why-grid">
-        <div class="why-item"><h4>Transparent &amp; Honest</h4><p>No hidden fees or false promises. What you see is what you get.</p></div>
-        <div class="why-item"><h4>Respect for Your Tax Exemption</h4><p>We ensure any tax savings stay yours—no clawbacks via inflated pricing or add-ons.</p></div>
-        <div class="why-item"><h4>Real Savings = Your Choice</h4><p>Use savings to lower payments, upgrade your vehicle, or keep them—no pressure.</p></div>
-        <div class="why-item"><h4>Culturally Rooted Service</h4><p>Indigenous-owned and community-minded, serving clients across Canada.</p></div>
-        <div class="why-item"><h4>No Upsell Games</h4><p>We work only with partner dealers who commit to fairness and transparency.</p></div>
-      </div>
+      <h3>Why Trust Turtle Island?</h3>
+      <ul class="checklist">
+        <li>✅ 100% Indigenous-owned and proudly <strong>Certified by the Canadian Council for Indigenous Business (CCIB/CCAB)</strong></li>
+        <li>✅ <strong>Trauma-informed & OCAP® trained staff</strong> protect your privacy and dignity</li>
+        <li>✅ Over 20 years working in Indigenous communities in social work & engagement</li>
+        <li>✅ Respectful of cultural protocols and traditional approaches</li>
+        <li>✅ We sell GAP, insurance, and warranties — but only with <strong>Free, Prior, and Informed Consent (FPIC)</strong></li>
+      </ul>
     </div>
   </section>
-
-  <!-- Supports + Roadmap live at /supports.html -->
 
   <section id="apply" class="form-wrap">
     <div class="container grid">
       <div class="form-card">
         <h3>Quick Pre-Approval</h3>
         <p class="muted">We’ll share your application with a trained partner dealership in Canada. They may contact you by phone, SMS, or email.</p>
-
-        <form name="preapproval"
-              method="POST"
-              data-netlify="true"
-              netlify-honeypot="bot-field"
-              action="/thank-you.html"
-              id="leadForm">
+        <form name="preapproval" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html" id="leadForm">
           <input type="hidden" name="form-name" value="preapproval">
-          <p style="position:absolute;left:-9999px;">
-            <label>Don’t fill this out: <input name="bot-field"></label>
-          </p>
-
+          <p style="position:absolute;left:-9999px;"><label>Don’t fill this out: <input name="bot-field"></label></p>
           <input type="hidden" name="utm_source"><input type="hidden" name="utm_medium">
           <input type="hidden" name="utm_campaign"><input type="hidden" name="utm_term">
           <input type="hidden" name="utm_content">
@@ -147,21 +131,16 @@
             </select></label>
           </div>
           <label>Notes (optional)<textarea name="notes" rows="3" placeholder="Seasonal fishing, self-employed, on-reserve delivery, timeline, budget…"></textarea></label>
-
           <label class="consent">
             <input type="checkbox" name="consent" required>
-            I consent to my application being shared with partner dealerships for the purpose of securing financing.
-            I understand the dealership will perform a credit check as part of the process. I agree to receive communications related to my application.
-            There is no cost to me for this service; the partner dealership pays the referral fee.
+            I consent to my application being shared with partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check as part of the process. I agree to receive communications related to my application. There is no cost to me for this service; the partner dealership pays the referral fee.
           </label>
-
           <button type="submit" class="btn wide">Get Pre-Approved</button>
         </form>
       </div>
-
       <aside class="trust">
         <h4>Trust &amp; Certification</h4>
-        <div class="ccab-badge" role="group" aria-label="Certification badge">
+        <div class="ccab-badge">
           <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
@@ -192,17 +171,15 @@
     </div>
   </footer>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script src="script.js"></script>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script>
+    if (window.netlifyIdentity) {
+      netlifyIdentity.on('login', () => {
+        document.location.href = '/dealers/portal.html';
+      });
+    }
+  </script>
 </body>
 </html>
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<script>
-  if (window.netlifyIdentity) {
-    netlifyIdentity.on('login', () => {
-      document.location.href = '/dealers/portal.html';
-    });
-  }
-</script>
